--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "yajra/laravel-datatables-oracle": "~6.0",
-        "barryvdh/laravel-dompdf": "^0.8.2"
+        "barryvdh/laravel-dompdf": "^0.8.2",
+        "khill/lavacharts": "^3.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
